Implemented get task
